// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQB4SgvxRCAxBaw52TBI6YWZraLn5W8ccH0Ki5PnLHO_iCLy"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQDh6efoeJw1caRAX8UG2xmJKadVPC9WxfCP_CeBuWBAJ2ja"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQC_hKfwWGAWzTvJzgGKdJpqvSNAMhiGQla4PipmTDK9lyBW"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQB4SgvxRCAxBaw52TBI6YWZraLn5W8ccH0Ki5PnLHO_iCLy",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 18316n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQB4SgvxRCAxBaw52TBI6YWZraLn5W8ccH0Ki5PnLHO_iCLy",
            "to": "kQDh6efoeJw1caRAX8UG2xmJKadVPC9WxfCP_CeBuWBAJ2ja",
            "type": "internal",
            "value": 9965029000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQB4SgvxRCAxBaw52TBI6YWZraLn5W8ccH0Ki5PnLHO_iCLy",
          "to": "kQDh6efoeJw1caRAX8UG2xmJKadVPC9WxfCP_CeBuWBAJ2ja",
          "type": "internal",
          "value": 9965029000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17217n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDh6efoeJw1caRAX8UG2xmJKadVPC9WxfCP_CeBuWBAJ2ja",
            "to": "kQC_hKfwWGAWzTvJzgGKdJpqvSNAMhiGQla4PipmTDK9lyBW",
            "type": "internal",
            "value": 9937047000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDh6efoeJw1caRAX8UG2xmJKadVPC9WxfCP_CeBuWBAJ2ja",
          "to": "kQC_hKfwWGAWzTvJzgGKdJpqvSNAMhiGQla4PipmTDK9lyBW",
          "type": "internal",
          "value": 9937047000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17227n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQC_hKfwWGAWzTvJzgGKdJpqvSNAMhiGQla4PipmTDK9lyBW",
            "to": "kQC_hKfwWGAWzTvJzgGKdJpqvSNAMhiGQla4PipmTDK9lyBW",
            "type": "internal",
            "value": 9909047000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQC_hKfwWGAWzTvJzgGKdJpqvSNAMhiGQla4PipmTDK9lyBW",
          "to": "kQC_hKfwWGAWzTvJzgGKdJpqvSNAMhiGQla4PipmTDK9lyBW",
          "type": "internal",
          "value": 9909047000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4951n,
      },
    ],
  },
]
`;
